[package]
name = "gei"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "gei-server"
path = "src/server.rs"

[lib]
name = "gei"
path = "src/lib.rs"
